--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAM TX - VIP</title>
+    <title>VIP কোর্স - TEAM TX</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Font: Anek Bangla -->
+    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Anek Bangla', sans-serif;
-            background-color: #f8f9fa;
+            background: linear-gradient(to right, #6a11cb, #2575fc);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -22,77 +21,64 @@
         .content {
             padding: 20px;
             background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
             max-width: 600px;
+            text-align: center;
             opacity: 0;
-            transform: translateY(20px);
-            animation: fadeIn 1.5s ease forwards;
+            transform: translateY(30px);
+            animation: fadeIn 1.5s ease-out forwards;
         }
         .join-btn {
-            background-color: #007bff;
+            background: linear-gradient(45deg, #ff512f, #dd2476);
             color: #ffffff;
             font-weight: bold;
-            transition: background-color 0.3s;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 30px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            display: inline-block;
+            text-decoration: none;
         }
         .join-btn:hover {
-            background-color: #0056b3;
+            transform: scale(1.1);
+            box-shadow: 0px 5px 15px rgba(255, 81, 47, 0.5);
+        }
+        h2 {
+            color: #007bff;
         }
         @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
+            0% { opacity: 0; transform: translateY(30px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
 <body>
 
 <div class="content">
-    <h2 class="text-center text-primary mb-4">TEAM TX - VIP à¦à§à¦°à§à¦¸à§ à¦à¦ªà¦¨à¦¾à¦à§ à¦¸à§à¦¬à¦¾à¦à¦¤à¦®!</h2>
+    <h2>TEAM TX - VIP কোর্স</h2>
     
-    <p>à¦à¦®à¦¾à¦¦à§à¦° TEAM TX VIP à¦à§à¦°à§à¦¸à¦à¦¿ à¦¡à¦¿à¦à¦¾à¦à¦¨ à¦à¦°à¦¾ à¦¹à¦¯à¦¼à§à¦à§ à¦à¦ªà¦¨à¦¾à¦à§ à¦à¦¿à¦°à§ à¦¥à§à¦à§ à¦¹à¦¿à¦°à§à¦¤à§ à¦°à§à¦ªà¦¾à¦¨à§à¦¤à¦° à¦à¦°à¦¾à¦° à¦à¦¨à§à¦¯à¥¤ à¦¯à¦¾à¦°à¦¾ à¦à¦¯à¦¼à§à¦¬ à¦¡à§à¦­à§à¦²à¦ªà¦®à§à¦¨à§à¦, API à¦¡à§à¦­à§à¦²à¦ªà¦®à§à¦¨à§à¦, à¦à¦¬à¦ à¦à¦¸ à¦à¦¸ à¦à¦² à¦¬à¦¾à¦à¦ªà¦¾à¦¸à¦¸à¦¹ à¦¨à¦¾à¦¨à¦¾ à¦§à¦°à¦¨à§à¦° à¦ªà§à¦°à¦¯à§à¦à§à¦¤à¦¿à¦à¦¤ à¦¦à¦à§à¦·à¦¤à¦¾ à¦à¦°à§à¦à¦¨ à¦à¦°à¦¤à§ à¦à¦¾à¦¨, à¦à¦ à¦à§à¦°à§à¦¸à¦à¦¿ à¦¤à¦¾à¦¦à§à¦° à¦à¦¨à§à¦¯à¥¤</p>
+    <p>আপনি কি ওয়েব ডেভেলপমেন্ট, API এক্সট্রাকশন ও SSL বাইপাস শিখতে চান? আমাদের VIP কোর্স আপনাকে একজন এক্সপার্ট বানাতে সাহায্য করবে!</p>
     
-    <h4>à¦à§à¦°à§à¦¸à§à¦° à¦à¦°à¦:</h4>
-    <ul>
-        <li><strong>à¦°à§à¦à§à¦²à¦¾à¦° à¦ªà§à¦°à¦¾à¦à¦:</strong> à§¨à§«à§¦à§¦ à¦à¦¾à¦à¦¾</li>
-        <li><strong>à¦à¦¾à¦¡à¦¼ à¦ªà§à¦°à¦¾à¦à¦:</strong> à§«à§¦à§¦ à¦à¦¾à¦à¦¾ (à¦¸à§à¦®à¦¿à¦¤ à¦¸à¦®à¦¯à¦¼à§à¦° à¦à¦¨à§à¦¯)</li>
+    <h4>কোর্সের বিস্তারিত:</h4>
+    <ul class="text-left">
+        <li><strong>কোর্স মূল্য:</strong> ২৫০০ টাকা (অফারে মাত্র ৫০০ টাকা!)</li>
+        <li><strong>API ডেভেলপমেন্ট:</strong> ওয়েবসাইট ও অ্যাপ থেকে API বের করা শেখা</li>
+        <li><strong>PHP API ডেভেলপমেন্ট:</strong> PHP দিয়ে কাস্টম API তৈরি করা</li>
+        <li><strong>SSL বাইপাস:</strong> ওয়েবসাইটের SSL বাইপাস ও সার্ভার এনালাইসিস</li>
+        <li><strong>ওয়েবসাইট ডিজাইন:</strong> HTML, CSS, JavaScript এবং Bootstrap ব্যবহার করে ওয়েবসাইট তৈরি করা</li>
     </ul>
 
-    <h4>à¦à§à¦°à§à¦¸à§ à¦¯à¦¾ à¦¯à¦¾ à¦¥à¦¾à¦à¦¬à§:</h4>
-    <ul>
-        <li><strong>à¦à¦¿à¦­à¦¾à¦¬à§ API à¦¬à§à¦° à¦à¦°à¦¬à§à¦¨:</strong> à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦ à¦à¦¬à¦ à¦à§à¦¯à¦¾à¦ªà§à¦²à¦¿à¦à§à¦¶à¦¨ à¦¥à§à¦à§ API à¦¬à§à¦° à¦à¦°à¦¾à¦° à¦à§à¦¶à¦² à¦à¦¬à¦ à¦¸à¦°à¦à§à¦à¦¾à¦® à¦¬à§à¦¯à¦¬à¦¹à¦¾à¦°à§à¦° à¦ªà¦¦à§à¦§à¦¤à¦¿à¥¤</li>
-        <li><strong>API PHP à¦¡à§à¦­à§à¦²à¦ªà¦®à§à¦¨à§à¦:</strong> à¦à¦¿à¦­à¦¾à¦¬à§ PHP à¦¦à¦¿à¦¯à¦¼à§ API à¦¤à§à¦°à¦¿ à¦ à¦¬à§à¦¯à¦¬à¦¹à¦¾à¦°à§à¦° à¦à¦¨à§à¦¯ à¦¸à¦ à¦¿à¦ à¦ªà¦¦à§à¦§à¦¤à¦¿ à¦à¦¨à§à¦¸à¦°à¦£ à¦à¦°à¦¬à§à¦¨à¥¤</li>
-        <li><strong>à¦à¦¸ à¦à¦¸ à¦à¦² à¦¬à¦¾à¦à¦ªà¦¾à¦¸:</strong> à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦à¦ªà§à¦²à¦¿à¦à§à¦¶à¦¨ à¦¬à¦¾ à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦à§ SSL à¦¬à¦¾à¦à¦ªà¦¾à¦¸ à¦à¦°à¦¾à¦° à¦ªà¦¦à§à¦§à¦¤à¦¿ à¦à¦¬à¦ à¦à¦à¦¿ à¦ªà§à¦°à¦¯à¦¼à§à¦à§à¦° à¦à§à¦·à§à¦¤à§à¦°à§ à¦à§à¦­à¦¾à¦¬à§ à¦¸à¦¤à¦°à§à¦ à¦¥à¦¾à¦à¦¤à§ à¦¹à¦¬à§à¥¤</li>
-        <li><strong>à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦§à¦°à¦¨à§à¦° à¦¸à¦°à¦à§à¦à¦¾à¦®:</strong> API à¦¬à§à¦° à¦à¦°à¦¾à¦° à¦à¦¨à§à¦¯ à¦à§à¦°à§à¦¤à§à¦¬à¦ªà§à¦°à§à¦£ à¦à§à¦²à¦¸ à¦à¦¬à¦ à¦¸à¦«à¦à¦à¦¯à¦¼à§à¦¯à¦¾à¦°, à¦à¦¬à¦ à¦à¦à§à¦²à§à¦° à¦¬à§à¦¯à¦¬à¦¹à¦¾à¦° à¦à¦°à¦¾à¦° à¦¸à¦ à¦¿à¦ à¦¨à¦¿à¦¯à¦¼à¦®à¥¤</li>
-        <li><strong>à¦à§à¦°à§à¦¤à§à¦¬à¦ªà§à¦°à§à¦£ PHP à¦à¦¿à¦ªà¦¸:</strong> à¦à¦¨à§à¦¨à¦¤ PHP à¦à§à¦¶à¦² à¦à¦¬à¦ à¦à¦¿à¦ªà¦¸, à¦¯à¦¾ à¦à¦ªà¦¨à¦¾à¦° à¦à§à¦¡à¦¿à¦ à¦¦à¦à§à¦·à¦¤à¦¾ à¦¬à¦¾à¦¡à¦¼à¦¾à¦¬à§ à¦à¦¬à¦ API à¦¡à§à¦­à§à¦²à¦ªà¦®à§à¦¨à§à¦ à¦¸à¦¹à¦ à¦à¦°à¦¬à§à¥¤</li>
-        <li><strong>à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦ à¦¸à§à¦°à§à¦¸ à¦à§à¦¡:</strong> à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦§à¦°à¦¨à§à¦° à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦à§à¦° à¦¸à§à¦°à§à¦¸ à¦à§à¦¡ à¦¬à¦¿à¦¶à§à¦²à§à¦·à¦£ à¦à¦¬à¦ à¦ à¦¥à§à¦à§ à¦à§à¦­à¦¾à¦¬à§ à¦¶à¦¿à¦à§à¦·à¦¾à¦à§à¦°à¦¹à¦£ à¦à¦°à¦¬à§à¦¨à¥¤</li>
-        <li><strong>à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦§à¦°à¦¨à§à¦° API:</strong> à¦à¦¿à¦­à¦¾à¦¬à§ à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦§à¦°à¦¨à§à¦° API à¦¤à§à¦°à¦¿ à¦à¦¬à¦ à¦¤à¦¾à¦¦à§à¦° à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦ªà§à¦°à¦¯à¦¼à§à¦à§à¦° à¦à§à¦·à§à¦¤à§à¦°à§ à¦¬à§à¦¯à¦¬à¦¹à¦¾à¦° à¦à¦°à¦¬à§à¦¨à¥¤</li>
-        <li><strong>à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦ à¦¤à§à¦°à¦¿:</strong> à¦¸à¦®à§à¦ªà§à¦°à§à¦£ à¦¨à¦¤à§à¦¨ à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦ à¦¤à§à¦°à¦¿à¦° à¦ªà§à¦°à¦à§à¦°à¦¿à¦¯à¦¼à¦¾ à¦à¦¬à¦ à¦¤à¦¾ à¦à¦¾à¦¸à§à¦à¦®à¦¾à¦à¦à§à¦¶à¦¨à§à¦° à¦à¦ªà¦¾à¦¯à¦¼à¥¤</li>
-        <li><strong>à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦ à¦à¦¾à¦¸à§à¦à¦®à¦¾à¦à¦à§à¦¶à¦¨:</strong> à¦à¦à¦à¦¿ à¦à¦¯à¦¼à§à¦¬à¦¸à¦¾à¦à¦à§à¦° à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦à¦ªà¦¾à¦¦à¦¾à¦¨ à¦à§à¦­à¦¾à¦¬à§ à¦à¦¾à¦¸à§à¦à¦®à¦¾à¦à¦ à¦à¦°à¦¬à§à¦¨, à¦à¦¬à¦ à¦à¦ªà¦¨à¦¾à¦° à¦ªà§à¦°à¦¯à¦¼à§à¦à¦¨ à¦à¦¨à§à¦¯à¦¾à¦¯à¦¼à§ à¦¡à¦¿à¦à¦¾à¦à¦¨ à¦à¦°à¦¬à§à¦¨à¥¤</li>
-        <li><strong>à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦§à¦°à¦¨à§à¦° à¦à§à¦²à¦¸:</strong> à¦¡à§à¦­à§à¦²à¦ªà¦®à§à¦¨à§à¦ à¦ªà§à¦°à¦à§à¦°à¦¿à¦¯à¦¼à¦¾à¦¯à¦¼ à¦¸à¦¹à¦¾à¦¯à¦¼à¦ à¦¬à¦¿à¦­à¦¿à¦¨à§à¦¨ à¦à§à¦²à¦¸ à¦à¦¬à¦ à¦¤à¦¾à¦¦à§à¦° à¦¬à§à¦¯à¦¬à¦¹à¦¾à¦°à¦¿à¦ à¦¦à¦¿à¦à¥¤</li>
-    </ul>
-
-    <h4>à¦à¦ à¦à§à¦°à§à¦¸à§ à¦à§à¦¨ à¦à¦à¦¶à¦à§à¦°à¦¹à¦£ à¦à¦°à¦¬à§à¦¨?</h4>
-    <ul>
-        <li><strong>à¦ªà§à¦°à¦à§à¦¤ à¦¦à¦à§à¦·à¦¤à¦¾ à¦à¦°à§à¦à¦¨:</strong> à¦ªà§à¦°à¦¯à¦¼à§à¦à¦¨à§à¦¯à¦¼ à¦à§à¦²à¦¸ à¦à¦¬à¦ à¦à§à¦à¦¨à¦¿à¦ à¦à¦¾à¦¨à¦¾à¦° à¦®à¦¾à¦§à§à¦¯à¦®à§ à¦à¦ªà¦¨à¦¾à¦° à¦¦à¦à§à¦·à¦¤à¦¾ à¦¬à¦¾à¦¡à¦¼à¦¾à¦¨à§à¥¤</li>
-        <li><strong>à¦¬à§à¦¯à¦à§à¦¤à¦¿à¦à¦¤ à¦à¦¾à¦à¦¡à¦²à¦¾à¦à¦¨:</strong> à¦à¦®à¦¾à¦¦à§à¦° à¦®à§à¦¨à§à¦à¦° à¦¥à§à¦à§ à¦¨à¦¿à¦¯à¦¼à¦®à¦¿à¦¤ à¦ªà¦°à¦¾à¦®à¦°à§à¦¶ à¦ à¦¸à¦¹à¦¾à¦¯à¦¼à¦¤à¦¾à¥¤</li>
-        <li><strong>à¦¬à§à¦¶à¦¿ à¦¶à¦¿à¦à§à¦¨, à¦à¦® à¦¬à§à¦¯à¦¯à¦¼à§:</strong> à¦¸à§à¦®à¦¿à¦¤ à¦¸à¦®à¦¯à¦¼à§à¦° à¦à¦¨à§à¦¯ à¦à¦ à¦¬à¦¿à¦¶à§à¦· à¦à¦¾à¦¡à¦¼ à¦®à§à¦²à§à¦¯à§ à¦¦à¦¾à¦°à§à¦£ à¦¸à§à¦¯à§à¦à¥¤</li>
-    </ul>
-
-    <h4>à¦à¦¿à¦­à¦¾à¦¬à§ à¦à¦à¦¶à¦à§à¦°à¦¹à¦£ à¦à¦°à¦¬à§à¦¨:</h4>
-    <ol>
-        <li>à¦¨à¦¿à¦à§ à¦¦à§à¦à¦¯à¦¼à¦¾ "Join Course" à¦¬à¦¾à¦à¦¨à§ à¦à§à¦²à¦¿à¦ à¦à¦°à§à¦¨ à¦à§à¦²à¦¿à¦à§à¦°à¦¾à¦®à§ à¦®à§à¦¸à§à¦ à¦à¦°à§à¦¨</li>
-        <li>à¦à§à¦°à§à¦¸à§à¦° à¦«à¦¿ à¦ªà¦°à¦¿à¦¶à§à¦§à§à¦° à¦ªà¦°à§à¦ à¦à¦ªà¦¨à¦¾à¦° à¦¸à¦¿à¦ à¦¨à¦¿à¦¶à§à¦à¦¿à¦¤ à¦à¦°à¦¾ à¦¹à¦¬à§à¥¤</li>
-        <li>à¦¸à¦«à¦² à¦°à§à¦à¦¿à¦¸à§à¦à§à¦°à§à¦¶à¦¨à§à¦° à¦ªà¦° à¦à§à¦°à§à¦¸à§à¦° à¦¸à¦®à¦¸à§à¦¤ à¦à§à¦¯à¦¾à¦à§à¦¸à§à¦¸ à¦²à¦¿à¦à§à¦ à¦à¦¬à¦ à¦à§à¦²à¦¾à¦¸à§à¦° à¦¸à¦®à¦¯à¦¼à¦¸à§à¦à¦¿ à¦à¦ªà¦¨à¦¾à¦° à¦à§à¦²à¦¿à¦à§à¦°à¦¾à¦®à§ à¦ªà¦¾à¦ à¦¾à¦¨à§ à¦¹à¦¬à§à¥¤</li>
+    <h4>কিভাবে জয়েন করবেন?</h4>
+    <ol class="text-left">
+        <li>"Join Course" বাটনে ক্লিক করুন</li>
+        <li>টেলিগ্রামে আমাদের মেসেজ করুন</li>
+        <li>পেমেন্ট সম্পন্ন করুন</li>
+        <li>পেমেন্ট নিশ্চিত হলে আপনাকে কোর্স লিংক ও ক্লাসের সময় জানানো হবে</li>
     </ol>
 
     <div class="text-center mt-4">
-        <a href="https://t.me/Owner_Of_TX" class="btn join-btn" target="_blank">Join Course</a>
+        <a href="https://t.me/Owner_Of_TX" class="join-btn" target="_blank">Join Course</a>
     </div>
 </div>
 
