--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VIP কোর্স - TEAM TX</title>
+    <title>VIP কোর্স - BN TEAM</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Font -->
@@ -69,7 +69,7 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#">TEAM TX</a>
+    <a class="navbar-brand" href="#">BN TEAM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -101,7 +101,7 @@
     </ul>
 
     <div class="text-center mt-4">
-        <a href="https://t.me/Owner_Of_TX" class="join-btn" target="_blank">Join Course</a>
+        <a href="https://t.me/MrFaisalAhmed" class="join-btn" target="_blank">Join Course</a>
     </div>
 </div>
 
@@ -113,7 +113,7 @@
 <!-- Typing Animation -->
 <script>
     var typed = new Typed("#typed-text", {
-        strings: ["VIP কোর্স - TEAM TX", "API Development শিখুন", "SSL Bypass শিখুন"],
+        strings: ["VIP কোর্স - BONGO NETWORK TEAM", "API Development শিখুন", "SSL Bypass শিখুন"],
         typeSpeed: 100,
         backSpeed: 50,
         loop: true
