--- a/index.html
+++ b/index.html
@@ -13,104 +13,130 @@
     <style>
         body {
             font-family: 'Anek Bangla', sans-serif;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
+            color: white;
+            text-align: center;
+        }
+        .hero-section {
+            position: relative;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             color: white;
         }
-        .navbar {
-            background: rgba(0, 0, 0, 0.7);
-        }
-        .hero-section {
-            padding: 50px 20px;
+        .hero-section video {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
         }
         .hero-title {
-            font-size: 32px;
+            font-size: 36px;
             font-weight: bold;
-        }
-        .countdown {
-            font-size: 22px;
-            margin-top: 10px;
         }
         .content {
             background: white;
             color: black;
-            border-radius: 10px;
-            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
             padding: 20px;
-            max-width: 600px;
+            border-radius: 10px;
+            max-width: 800px;
             margin: auto;
-            opacity: 0;
-            transform: translateY(30px);
-            animation: fadeIn 1.5s ease-out forwards;
+            margin-top: -100px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
         }
         .join-btn {
             background: linear-gradient(45deg, #ff512f, #dd2476);
             color: white;
-            font-weight: bold;
-            border: none;
             padding: 12px 20px;
             border-radius: 30px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
             text-decoration: none;
             display: inline-block;
             margin-top: 15px;
         }
-        .join-btn:hover {
-            transform: scale(1.1);
-            box-shadow: 0px 5px 15px rgba(255, 81, 47, 0.5);
+        .testimonial {
+            background: #f8f9fa;
+            padding: 40px;
+            margin-top: 50px;
         }
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: translateY(30px); }
-            100% { opacity: 1; transform: translateY(0); }
+        .faq-section {
+            background: white;
+            padding: 30px;
+            margin-top: 50px;
+        }
+        .footer {
+            background: #222;
+            padding: 20px;
+            color: white;
+            margin-top: 50px;
+        }
+        #scroll-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: red;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 50%;
+            cursor: pointer;
+            display: none;
         }
     </style>
 </head>
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#">BN TEAM</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#">হোম</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">কোর্স</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">যোগাযোগ</a></li>
-        </ul>
-    </div>
-</nav>
-
-<!-- Hero Section -->
+<!-- Hero Section with Background Video -->
 <div class="hero-section">
-    <h1 class="hero-title"><span id="typed-text"></span></h1>
-    <p>আপনার স্কিল আপগ্রেড করুন এবং একজন এক্সপার্ট হোন</p>
-    <div class="countdown">অফার শেষ হতে বাকি: <span id="timer"></span></div>
+    <video autoplay muted loop>
+        <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+    </video>
+    <div>
+        <h1 class="hero-title"><span id="typed-text"></span></h1>
+        <p>আপনার স্কিল আপগ্রেড করুন এবং এক্সপার্ট হন!</p>
+        <a href="https://t.me/MrFaisalAhmed" class="join-btn">Join Course</a>
+    </div>
 </div>
 
 <!-- Course Content -->
 <div class="content">
     <h2>VIP কোর্সের সুবিধা</h2>
     <ul class="text-left">
-        <li><strong>কোর্স মূল্য:</strong> ২৫০০ টাকা (অফারে ৫০০ টাকা!)</li>
         <li><strong>API ডেভেলপমেন্ট:</strong> ওয়েবসাইট ও অ্যাপ থেকে API বের করা শেখা</li>
         <li><strong>PHP API ডেভেলপমেন্ট:</strong> PHP দিয়ে কাস্টম API তৈরি করা</li>
         <li><strong>SSL বাইপাস:</strong> ওয়েবসাইটের SSL বাইপাস ও সার্ভার এনালাইসিস</li>
         <li><strong>ওয়েবসাইট ডিজাইন:</strong> HTML, CSS, JavaScript ও Bootstrap দিয়ে ওয়েবসাইট তৈরি</li>
     </ul>
-
-    <div class="text-center mt-4">
-        <a href="https://t.me/MrFaisalAhmed" class="join-btn" target="_blank">Join Course</a>
-    </div>
 </div>
 
-<!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Testimonials Section -->
+<div class="testimonial">
+    <h2>Student Feedback</h2>
+    <p>⭐⭐⭐⭐⭐ "এই কোর্সটি আমার ক্যারিয়ারে নতুন সম্ভাবনা তৈরি করেছে!" - রাকিব</p>
+    <p>⭐⭐⭐⭐ "SSL বাইপাস শেখার দারুণ সুযোগ!" - মেহেদী</p>
+</div>
 
-<!-- Typing Animation -->
+<!-- FAQ Section -->
+<div class="faq-section">
+    <h2>সচরাচর জিজ্ঞাসা</h2>
+    <p><strong>🔹 এই কোর্স কতদিনের?</strong><br> কোর্সটি ১ মাসের এবং লাইভ ক্লাস থাকবে।</p>
+    <p><strong>🔹 কি কি প্রয়োজন?</strong><br> কেবলমাত্র একটি ল্যাপটপ বা মোবাইল ডিভাইস এবং ইন্টারনেট সংযোগ।</p>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+    <p>📞 যোগাযোগ: 018XXXXXXXX | ✉️ Email: info@bnteam.com</p>
+    <p>🔗 আমাদের ফলো করুন: 
+        <a href="https://facebook.com" style="color: white;">Facebook</a> | 
+        <a href="https://youtube.com" style="color: white;">YouTube</a>
+    </p>
+</div>
+
+<!-- Scroll to Top Button -->
+<button id="scroll-top">⬆️</button>
+
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
     var typed = new Typed("#typed-text", {
         strings: ["VIP কোর্স - BONGO NETWORK TEAM", "API Development শিখুন", "SSL Bypass শিখুন"],
@@ -118,30 +144,19 @@
         backSpeed: 50,
         loop: true
     });
-</script>
 
-<!-- Countdown Timer -->
-<script>
-    function countdown() {
-        var endDate = new Date("February 29, 2025 23:59:59").getTime();
-        var x = setInterval(function() {
-            var now = new Date().getTime();
-            var distance = endDate - now;
+    // Scroll Top Button
+    window.onscroll = function() {
+        if (document.documentElement.scrollTop > 300) {
+            document.getElementById("scroll-top").style.display = "block";
+        } else {
+            document.getElementById("scroll-top").style.display = "none";
+        }
+    };
 
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-            document.getElementById("timer").innerHTML = days + " দিন " + hours + " ঘন্টা " + minutes + " মিনিট " + seconds + " সেকেন্ড ";
-            
-            if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("timer").innerHTML = "অফার শেষ!";
-            }
-        }, 1000);
-    }
-    countdown();
+    document.getElementById("scroll-top").onclick = function() {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+    };
 </script>
 
 </body>
